Solve problems of mobile experience again, since the spacing was not good enough and the image was not fitting properly

--- a/index_styles.css
+++ b/index_styles.css
@@ -30,11 +30,14 @@ body{background-color: #DCE1DE;
   
 }
 .btn-get_wiser:hover {
-  color: black;git a
+  color: black;
   background-color: grey;}
   
-.img-fluid{width:50%;
-  height: 50%;
+
+
+.img-fluid{
+  width:300px;
+  height: 300px;
 
 }
 
